--- a/src/config/dynamic-theme-fixes.config
+++ b/src/config/dynamic-theme-fixes.config
@@ -3438,6 +3438,9 @@ IGNORE INLINE STYLE
 #color_picker_container .sample
 .zci--color_codes .circle
 
+IGNORE DARK SELECTOR
+.no-theme body
+
 ================================
 
 duo.google.com
