youtube scrollbar now always hidden

--- a/src/config/dynamic-theme-fixes.config
+++ b/src/config/dynamic-theme-fixes.config
@@ -3902,7 +3902,7 @@ CSS
 }
 .fbNub._50mz .fbNubFlyoutFooter::after {
     background-color: ${rgba(0, 0, 0, .15)} !important;
-}
+}176259
 .fbNub._50mz .fbNubFlyoutInner,
 ._4cd8 ._69pt,
 ._4mq3 .fbNubFlyout,
@@ -12471,7 +12471,7 @@ CSS
 IGNORE IMAGE ANALYSIS
 .flag-icon-pl
 .flag-icon-kr
-.flag-icon-fi
+.flag-icon-fi176259
 .flag-icon-jp
 .flag-icon-ru
 .flag-icon-si
@@ -12973,6 +12973,9 @@ INVERT
 CSS
 html[hide-scrollbar] ::-webkit-scrollbar {
     display: none !important;
+}
+::-webkit-scrollbar {
+	display: none;
 }
 #contenteditable-textarea {
     color: ${black} !important;
